--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <dt>Byte Buddy</dt>
     <dd>
         Byte Buddy is a code generation library for creating Java classes during the runtime of a Java
-        application and without the help of a compiler. Other than the code generation utilities that 
+        application and without the help of a compiler. Other than the code generation utilities that
         <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/reflect/Proxy.html">ship
-        with the Java Class Library</a>, Byte Buddy allows the creation of arbitrary classes and is 
+        with the Java Class Library</a>, Byte Buddy allows the creation of arbitrary classes and is
         not limited to implementing interfaces for the creation of runtime proxies.
     </dd>
 </dl>
@@ -83,7 +83,7 @@
                         normally answer as quickly as possible. We think that Stack Overflow is a great place to share
                         knowledge which is why we decided to not maintain our own support platform. If you have a
                         question that does not fit into Stack Overflow's Q&amp;A format, please ask your question
-                        on our <a href="https://groups.google.com/forum/#!forum/byte-buddy">mailing list</a> instead.
+                        on our <a href="https://groups.google.com/g/byte-buddy">mailing list</a> instead.
                     </dd>
                 </dl>
                 <dl>
@@ -95,7 +95,7 @@
                         the Java version that you were using. If you have a suggestion for a new feature, you can also
                         use the <a href="https://github.com/raphw/byte-buddy/issues">issue tracker</a>. If you want to
                         discuss this feature first, start such a discussion
-                        <a href="https://groups.google.com/forum/#!forum/byte-buddy">on out mailing list</a>.
+                        <a href="https://groups.google.com/g/byte-buddy">on out mailing list</a>.
                     </dd>
                 </dl>
                 <dl>
@@ -104,7 +104,7 @@
                         If you have fixed a bug or developed a feature for Byte Buddy that you want to share, simply
                         create a <a href="https://github.com/raphw/byte-buddy/pulls">pull request</a> for it. If you
                         are planning to implement an extensive feature for Byte Buddy,
-                        <a href="https://groups.google.com/forum/#!forum/byte-buddy">please get in touch before
+                        <a href="https://groups.google.com/g/byte-buddy">please get in touch before
                             starting its development</a>. This way, we can coordinate the development process. You can
                         find more information on our <a href="#/develop">development page</a>. Thank you for improving
                         Byte Buddy!
